--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "mongoose": "^6.5.4",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "socket.io-client": "^4.4.0"
+    "passport-local": "^1.0.0"
   }
 }
